# EVL

./: .gitignore  README.md  main.py  pyproject.toml  system_prompt.txt
.github/workflows/: deploy.yml
app/: ai.py  app.py
app/analyzer/: llm_analyzer.py  semantic_analyzer.py  semantic_analyzer_support.py
app/api/routes/: eval_router.py  llm_router.py
app/eval/: control_flow_analyzer.py  error_listener.py  eval.py  evaluator.py  expression_builder.py  postfix.py  print_formatter.py  semantic_validation.py  steps_recorder.py  variable_evaluator.py  variable_manager.py
app/eval/handler/: base_expression_handler.py  comparison_handler.py
app/models/: MacroValue.py  Operators.py  Response.py  Result.py  Scope.py  Steps.py  Symbol.py  Types.py  Variable.py  Variables.py  custom_exceptions.py
app/utils/: formatting.py  log_config.py
grammer/: EVALLexer.g4  EVALParser.g4  generator.py  test.eval  test2.eval  test3.eval
setup/grammer/: EVLLEXER.g4  EVLPARSER.g4  test.eval
